# comet-node

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: naim-pr-ci.yml  naim-production-release.yml
cmake/: GIT.cmake  ccache.cmake
common/include/comet/: compose_renderer.h  crypto_utils.h  demo_state.h  execution_plan.h  import_bundle.h  infer_runtime_config.h  models.h  planner.h  reconcile.h  runtime_status.h  scheduling_policy.h  sqlite_store.h  state_json.h
common/src/: compose_renderer.cpp  crypto_utils.cpp  demo_state.cpp  execution_plan.cpp  import_bundle.cpp  infer_runtime_config.cpp  planner.cpp  reconcile.cpp  runtime_status.cpp  scheduling_policy.cpp  sqlite_store.cpp  state_json.cpp
common/src/importing/: import_bundle.cpp
common/src/planning/: compose_renderer.cpp  compose_renderer_tests.cpp  execution_plan.cpp  planner.cpp  reconcile.cpp  scheduling_policy.cpp
common/src/runtime/: infer_runtime_config.cpp  runtime_status.cpp  runtime_status_tests.cpp
common/src/security/: crypto_utils.cpp
common/src/state/: assignment_repository.cpp  assignment_repository_tests.cpp  auth_repository.cpp  controller_settings_repository.cpp  demo_state.cpp  desired_state_placement_resolver.cpp  desired_state_repository.cpp  desired_state_sqlite_codec.cpp  desired_state_v2_projector.cpp  desired_state_v2_projector_support.cpp  desired_state_v2_projector_tests.cpp  desired_state_v2_renderer.cpp  desired_state_v2_validator.cpp  desired_state_v2_validator_tests.cpp  model_library_repository.cpp  registered_host_repository.cpp  skills_factory_repository.cpp  sqlite_statement.cpp  sqlite_store.cpp  sqlite_store_schema.cpp  (+4 more)
config/: comet-node-config.json  naim-node-config.json
config/demo-plane/: infer.json  plane.json
config/qwen25-0.5b-vllm-smoke/: desired-state.json
config/qwen25-0.5b-vllm-split/: desired-state.json
config/qwen35-122b-a10b/: desired-state.json
config/qwen35-27b/: desired-state.json
config/qwen35-35b-a3b/: desired-state.json
config/qwen35-397b-a17b/: desired-state.json
config/qwen35-9b-min/: desired-state.json
config/simple-data-parallel-plane/: plane.json
config/simple-test-plane/: plane.json
config/v2-llama-rpc-backend/: desired-state.v2.json
config/v2-llama-rpc-replicas/: desired-state.v2.json
config/v2-llm-backend-only/: desired-state.v2.json
config/v2-llm-with-app/: desired-state.v2.json
config/v2-maglev-35b-2gpu/: desired-state.v2.json
controller/src/: auth_http_service.cpp  auth_support_service.cpp  bundle_http_service.cpp  controller_action.cpp  controller_cli.cpp  controller_http_router.cpp  controller_http_server.cpp  controller_http_server_support.cpp  controller_http_transport.cpp  controller_network_manager.cpp  controller_remote_client.cpp  hostd_http_service.cpp  interaction_http_service.cpp  interaction_service.cpp  main.cpp  model_library_http_service.cpp  plane_http_service.cpp  plane_service.cpp  read_model_http_service.cpp  scheduler_http_service.cpp  scheduler_service.cpp
docs/: architecture.md  audit-2026-03-31.md  audit-2026-04-04.md  external-inference-contract.md  hpc1-qwen25-0.5b-data-parallel-benchmark-2026-03-28.md  hpc1-qwen25-0.5b-data-parallel-benchmark-rerun-2026-03-28.md  hpc1-qwen25-0.5b-data-parallel-diagnostic-matrix-2026-03-28.md  hpc1-qwen35-9b-data-parallel-benchmark-2026-03-28.md  live-phase-k-validation-report-2026-03-22.md  live-phase-l-validation-report-2026-03-22.md  live-storage-validation-report-2026-03-21.md  phase-e-status-report-2026-03-21.md  phase-g-status-report-2026-03-21.md  phase-h-status-report-2026-03-22.md  phase-k-status-report-2026-03-22.md  phase-l-status-report-2026-03-22.md  refactoring-rules.md  skills-factory.md
hostd/src/: hostd_app.cpp  main.cpp
launcher/src/: launcher_app.cpp  launcher_app.h  main.cpp
migrations/: 0001_initial.sql
runtime/base/: Dockerfile  Dockerfile.in
runtime/browsing/: Dockerfile  entrypoint.sh
runtime/controller/: Dockerfile
runtime/hostd/: Dockerfile
runtime/infer/: Dockerfile  Dockerfile.in  entrypoint.sh  inferctl.sh  runtime-profiles.json
runtime/skills/: Dockerfile  entrypoint.sh  skillsd.py
runtime/voice/: CMakeLists.txt  Dockerfile
runtime/voice-maker/: Dockerfile  server.py
runtime/voice/src/: main.cpp
runtime/web-ui/: Caddyfile  Dockerfile  nginx.conf.template
runtime/worker/: Dockerfile  Dockerfile.in  entrypoint.sh  vllm_launcher.py
scripts/: benchmark-data-parallel-diagnostic.py  benchmark-data-parallel-diagnostic.sh  benchmark-data-parallel-throughput.sh  benchmark-openai-multi-base.sh  build-context.sh  build-host.sh  build-runtime-images.sh  build-target.sh  build-webgateway-runtime.sh  check-external-inference-contract.sh  check-live-isolated-browsing.sh  check-live-maglev-web-interaction.sh  check-live-phase-f.sh  check-live-phase-g.sh  check-live-phase-h.sh  check-live-phase-k.sh  check-live-phase-l.sh  check-live-scheduler-single-gpu.sh  check-live-scheduler.sh  check-live-storage.sh  check-live-vllm-single-node.sh  check-live-vllm-split-host.sh  check-macos.sh  check.sh  comet-devtool.sh  configure-build.sh  configure-host-build.sh  ensure-vcpkg-deps.sh  find-vcpkg.sh  hpc1-dev-sandbox.sh  install-single-node.sh  llama-rpc-replica-benchmark.sh  llama-rpc-smoke.sh  package-host-release.sh  package-target.sh  print-build-dir.sh  print-host-build-dir.sh  resolve-build-target.sh  run-plane.sh  run-vllm-final-tests.py
scripts/ci/: capture-main-release-state.sh  configure-main-ruleset.sh  detect-release-scope.sh  fetch-main-release-report.sh  hpc1-build-common.sh  hpc1-build-push-harbor.sh  hpc1-build-turboquant.sh  hpc1-build.sh  hpc1-pull-main.sh  knowledge-vault-release-gate.py  main-bootstrap-controller-update.sh  pr-lightweight-checks.sh  rollback-main-release.sh
scripts/deploy/: deploy-hpc1-hostd.sh  naim-production-env.sh
scripts/release/: build-and-push-images.sh
scripts/windows/: build-target.ps1  package-target.ps1
ui/operator/: index.html
ui/operator-react/: index.html  package-lock.json  package.json
(+557 files in other folders)
